--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,12 +5,11 @@ edition = "2024"
 
 [dependencies]
 crossbeam-deque = "0.8.6"
+futures = "0.3.31"
 libc = "0.2.174"
 memmap2 = "0.9.7"
 rayon = "1.10.0"
-tokio = { version = "1.47.1", features = ["rt-multi-thread", "full"] }
-tokio-uring = { version = "0.5.0", features = [] }
+tokio = { version = "1.47.1", features = ["rt-multi-thread", "fs", "io-util"] }
 
-# [dependencies.tokio-uring]
-# version = "0.5.0"
-# features = ["tokio = '1.47.1'"]
+[features]
+default = []
